attempting to fix book page on mobile

--- a/assets/_sass/01-atoms/_table.scss
+++ b/assets/_sass/01-atoms/_table.scss
@@ -20,6 +20,8 @@ table {
     --text-color: var( --white );
   }
 
+
+  // Small screens only.
   @media screen and ( max-width: $md ) {
     border: 1px solid var( --purple );
     width: 100%;
@@ -86,8 +88,38 @@ table {
         margin-left: 1rem;
       }
     }
+
+    // Variation: Book page.
+    .book-count + & {
+      border: 0;
+
+      thead {
+        display: none;
+      }
+
+      tr {
+        border-top: 1px solid var(--black);
+        white-space: normal;
+
+        &:first-child {
+          border-top: 0;
+        }
+      }
+
+      td {
+        margin: 1rem 0 !important;
+
+        &:nth-child(3)::before {
+          content: 'Read: ';
+          display: inline-block;
+          font-weight: bold;
+        }
+      }
+    }
   }
 
+
+  // Large screens only.
   @media screen and ( min-width: $md ) {
     tbody tr {
       border-bottom: 1px solid var( --black );
